# yingpan-tool-test1

./: CMakeLists.txt  README.md  SMART_PAGE_IMPLEMENTATION.md  backup_smartdata.cpp  resources.qrc  test.cpp  test_cmake.txt
build_new/: CMakeCache.txt  Makefile  cmake_install.cmake
build_new/DiskToolbox_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build_new/DiskToolbox_autogen/4V7MFRDWMD/: moc_speedtestwidget.cpp  moc_speedtestwidget.cpp.d
build_new/DiskToolbox_autogen/EWIEGA46WW/: qrc_resources.cpp
build_new/DiskToolbox_autogen/O26ZFEGGH6/: moc_diskinfowidget.cpp.d
build_new/DiskToolbox_autogen/OCUC6IHX3O/: moc_smartwidget.cpp  moc_smartwidget.cpp.d
build_new/DiskToolbox_autogen/TBGBFLAEGA/: moc_dashboardwidget.cpp.d
build_new/DiskToolbox_autogen/UVLADIE3JM/: moc_mainwindow.cpp.d
resources/styles/: dark.qss  light.qss
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/core/: diskdetector.cpp  diskdetector.h  diskutils.cpp  diskutils.h  nvmedata.cpp  nvmedata.h  satadata.cpp  satadata.h  smartattributedict.h  smartdata.cpp  smartdata.h  smartfactory.cpp  smartfactory.h
src/dashboard/: dashboardwidget.cpp  dashboardwidget.h
src/diskinfo/: diskinfowidget.cpp  diskinfowidget.h
src/smart/: smartwidget.cpp  smartwidget.h
src/spaceanalyzer/: spaceanalyzerwidget.cpp  spaceanalyzerwidget.h
src/speedtest/: speedtestwidget.cpp  speedtestwidget.h
test_build/: CMakeCache.txt  Makefile  cmake_install.cmake
test_build/QtTest_autogen/: deps
